added documentation on backend
